--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -72,8 +72,10 @@ pages:
 #  - 移植说明:
 #    - 'Risc-V架构芯片移植说明': 'docs/applicationnote/risc-v.md'
 #    - 'C-SKY架构芯片移植说明': 'docs/applicationnote/c-sky.md'
+  - 'AN0001 Serial设备应用笔记': 'docs/applicationnote/an0001_uart.md'
   - 开发板说明:
     - '正点原子板Nano入门环境搭建': 'docs/applicationnote/apollo_nano_start.md'
+    - 'AN0001': 'docs/applicationnote/an0001_uart.md'
 #    - '正点原子板IoT入门环境搭建': 'docs/applicationnote/apollo_advanced.md'
 #    - '[正点原子板]RT-Thread实验手册': 'docs/applicationnote/rtt_experiment.md'
 #    - '[QEMU模拟器]IoT进阶环境搭建': 'docs/applicationnote/qemu_iot_advanced.md'
